# 3D-Pokemon-1st-Gen

./: CMakeLists.txt  IDEAS.txt  Makefile  README.md  SpriteFactory.h  open_image.cpp
libs/: Makefile  cmake_install.cmake
libs/assimp-3.0.1270/code/: Makefile  cmake_install.cmake
libs/assimp-3.0.1270/contrib/zlib/: Makefile  cmake_install.cmake
libs/bullet-2.81-rev2613/src/BulletCollision/: Makefile  cmake_install.cmake
libs/bullet-2.81-rev2613/src/BulletDynamics/: Makefile  cmake_install.cmake
libs/bullet-2.81-rev2613/src/BulletSoftBody/: Makefile  cmake_install.cmake
libs/bullet-2.81-rev2613/src/LinearMath/: Makefile  cmake_install.cmake
src/: Sprite.cpp  Sprite.h  SpriteFactory.cpp  SpriteFactory_test.cpp  Tile.cpp  Tile.h  open_image.cpp
